# bleriomic

./: .gitignore  .pylintrc  BUILDME.md  main.py  micropy.json  pyproject.toml  pyrightconfig.json
src/: esp32_ble.py  main.py  nus_kitty.py  uuid.py
