[tool.poetry]
name = "bleriomic"
version = "0.1.0"
description = ""
authors = ["Tyrn <a@b.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[tool.poetry.group.dev.dependencies]
micropy-cli = "^4.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs          # Exclude a few common directories in the
    | \.git           # root of the project.
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
force-exclude = '''
(
    i2c_lcd.py        # Exclude a few files in the
  | lcd_api.py        # root of the project.
)
'''

