[tool.poetry]
name = "bleriomic"
version = "0.1.0"
description = ""
authors = ["Tyrn <a@b.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
micropy-cli = "^4.2.2"
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
rshell = "^0.0.36"
adafruit-ampy = "^1.1.0"
pylint = "^3.3.4"
ruff = "^0.9.4"
black = "^25.1.0"
micropython-esp32-stubs = "^1.23.0.post2"
micropython-stdlib-stubs = "^1.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs          # Exclude a few common directories in the
    | \.git           # root of the project.
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
force-exclude = '''
(
    i2c_lcd.py        # Exclude a few files in the
  | lcd_api.py        # root of the project.
)
'''
